# articated_research

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: acquisition.cmake  articated_android_app.cmake  articated_app.cmake  augmentation_widget.cmake  movement3d.cmake  movement3d_filter.cmake  opencv.cmake  vision_methods.cmake
include/: acquisition.hpp  augmentation_widget.h  model_loader.hpp  movement3d.hpp  movement3d_filter.hpp  vision_methods.hpp  window.h
src/: acquisition.cpp  augmentation_widget.cpp  main.cpp  model_loader.cpp  movement3d.cpp  movement3d_filter.cpp  vision_methods.cpp  window.cpp
tests/: CMakeLists.txt  install_opencv.sh
tests/acquisition/: CMakeLists.txt  demo.cpp  main.cpp  test.cpp
tests/augmentation/: CMakeLists.txt  augmentation_widget.cpp  augmentation_widget.h  main.cpp  window.cpp  window.h  window.ui
tests/classification/: CMakeLists.txt  demo.cpp  test.cpp
tests/extraction/: CMakeLists.txt  main.cpp
tests/movement3d/: CMakeLists.txt  test.cpp
tests/movement3d_filter/: CMakeLists.txt  test.cpp
tests/preprocessing/: CMakeLists.txt  demo.cpp  main.cpp  test.cpp
tests/qgl_cv_test/: CMakeLists.txt  augmentation_widget.cpp  augmentation_widget.h  gl_testwidget.cpp  gl_testwidget.h  main.cpp  window.cpp  window.h  window.ui
tests/qgl_test/: gl_testwidget.cpp  gl_testwidget.h  qgl_test.pro  window.cpp  window.h  window.ui
tests/samples/: 1_marker.webm  1_marker_in_hand.webm  1_marker_with_border.webm  3_marker_with_border.webm  3_markers_bad.webm
tests/segmentation/: CMakeLists.txt  main.cpp
